[tool.poetry]
name = "aws-aioutils"
version = "1.0"
description = "AWS utilities (Asyncio)"
authors = ["Merfrei <contact@merfrei.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aioboto3 = "^9.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
